--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -64,4 +64,4 @@ If you're using a self-hosted replicated ClickHouse deployment, you must also pr
 The TensorZero Gateway typically applies database migrations automatically when it starts up.
 
 If you're using a self-hosted replicated ClickHouse deployment, you must apply database migrations manually with `gateway --run-migrations-only`.
-The gateway will not apply migrations automatically, and will error on startup if migrations are missing.
+In this case, the gateway will not apply migrations automatically, and will error on startup if migrations are missing.
