--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -21,6 +21,11 @@ See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more
 
 ### Production
 
+<Note>
+  TensorZero tests against ClickHouse `24.12` and `latest`, as well as well as
+  ClickHouse Cloud `stable` and `fast` channels.
+</Note>
+
 #### Managed deployments
 
 For production deployments, the easiest setup is to use a managed service like <a href="https://clickhouse.com/cloud" target="_blank">ClickHouse Cloud</a>.
