--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -23,7 +23,7 @@ See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more
 
 <Note>
   TensorZero tests against ClickHouse `24.12` and `latest`, as well as well as
-  ClickHouse Cloud `stable` and `fast` channels.
+  ClickHouse Cloud `regular` and `fast` channels.
 </Note>
 
 #### Managed deployments
