--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -22,8 +22,8 @@ See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more
 ### Production
 
 <Note>
-  TensorZero tests against ClickHouse `24.12` and `latest`, as well as well as
-  ClickHouse Cloud `regular` and `fast` channels.
+  TensorZero tests against ClickHouse `24.12` and `latest` open-source releases,
+  as well as well as ClickHouse Cloud's `regular` and `fast` release channels.
 </Note>
 
 #### Managed deployments
