--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -21,11 +21,6 @@ See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more
 
 ### Production
 
-<Note>
-  TensorZero tests against ClickHouse `24.12` and `latest` open-source releases,
-  as well as well as ClickHouse Cloud's `regular` and `fast` release channels.
-</Note>
-
 #### Managed deployments
 
 For production deployments, the easiest setup is to use a managed service like <a href="https://clickhouse.com/cloud" target="_blank">ClickHouse Cloud</a>.
@@ -33,6 +28,11 @@ For production deployments, the easiest setup is to use a managed service like <
 ClickHouse Cloud is also available through the [AWS Marketplace](https://aws.amazon.com/marketplace/pp/prodview-jettukeanwrfc), [GCP Marketplace](https://console.cloud.google.com/marketplace/product/clickhouse-public/clickhouse-cloud), and [Azure Marketplace](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/clickhouse.clickhouse_cloud).
 
 Other options for managed ClickHouse deployments include [Tinybird](https://www.tinybird.co/) (serverless) and [Altinity](https://www.altinity.com/) (hands-on support).
+
+<Note>
+  TensorZero tests against ClickHouse Cloud's `regular` and `fast` release
+  channels.
+</Note>
 
 #### Self-hosted deployments
 
@@ -42,6 +42,12 @@ TensorZero supports single-node and replicated deployments.
 It currently does not support sharded deployments.
 
 See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more details on configuring your ClickHouse deployment.
+
+<Note>
+  TensorZero tests against ClickHouse `24.12` and `latest`. We recommend pinning
+  a version (`24.12` or newer). ClickHouse will occasionally introduce breaking
+  changes and other issues (e.g. `25.8` had multiple regressions).
+</Note>
 
 ## Configure
 
