parallel_tool_calling -> parallel_tool_calls

--- a/docs/gateway/guides/tool-use.mdx
+++ b/docs/gateway/guides/tool-use.mdx
@@ -350,11 +350,11 @@ The `tool_choice` parameter can be set either in your configuration file or dire
 
 ### Calling multiple tools in parallel
 
-You can enable parallel tool calling by setting the `parallel_tool_calling` parameter to `true`.
+You can enable parallel tool calling by setting the `parallel_tool_calls` parameter to `true`.
 
 If enabled, the models will be able to request multiple tool calls in a single inference request (conversation turn).
 
-You can specify `parallel_tool_calling` in the configuration file or in the inference request.
+You can specify `parallel_tool_calls` in the configuration file or in the inference request.
 
 ### Integrating with Model Context Protocol (MCP) servers
 
