Add health check docs

--- a/docs/deployment/tensorzero-ui.mdx
+++ b/docs/deployment/tensorzero-ui.mdx
@@ -112,8 +112,8 @@ See our [GitHub repository](https://github.com/tensorzero/tensorzero/blob/main/u
 
 ### Add a health check
 
-The TensorZero UI exposes the `/health` endpoint for health checks.
-This endpoint checks that the UI is running, the associated configuration is valid, and the ClickHouse connection is healthy.
+The TensorZero UI exposes an endpoint for health checks.
+This `/health` endpoint checks that the UI is running, the associated configuration is valid, and the ClickHouse connection is healthy.
 
 ### Customize the deployment
 
