--- a/docs/gateway/guides/prompt-templates-schemas.mdx
+++ b/docs/gateway/guides/prompt-templates-schemas.mdx
@@ -397,3 +397,10 @@ Now we can manage our prompts as configuration files, and get structured inferen
 As discussed, it's helpful to manage prompts in a centralized way.
 With TensorZero's approach, these prompts still live in your repository, which simplifies versioning, access control, GitOps, and more.
 This setup also let us easily benefit from more advanced features like [A/B testing different prompts](/gateway/tutorial/#experimentation) or [fine-tuning a model](/recipes/).
+
+<Tip>
+
+You can enable template file system access to reuse shared snippets.
+See [Organize your configuration](/operations/organize-your-configuration#enable-template-file-system-access-to-reuse-shared-snippets) for details.
+
+</Tip>
