--- a/docs/operations/organize-your-configuration.mdx
+++ b/docs/operations/organize-your-configuration.mdx
@@ -36,7 +36,7 @@ You can decompose your templates into smaller, reusable snippets.
 This makes it easier to maintain and reuse code across multiple templates.
 
 By default, file system access is disabled for security reasons, since template imports are evaluated dynamically and could potentially access sensitive files.
-You should ensure ...
+You should ensure that only trusted templates are allowed access to the file system.
 
 To enable template file system access, you can set the `allow_file_system` option in your configuration file:
 
