Move other pages

--- a/docs/operations/extend-tensorzero.mdx
+++ b/docs/operations/extend-tensorzero.mdx
@@ -1,5 +1,5 @@
 ---
-title: Extending TensorZero
+title: Extend TensorZero
 description: Learn how to extend or override TensorZero to access provider features we don't support out of the box.
 ---
 
