--- a/docs/operations/manage-credentials.mdx
+++ b/docs/operations/manage-credentials.mdx
@@ -1,5 +1,5 @@
 ---
-title: Credential Management (API Key Management)
+title: Manage credentials (API keys)
 description: Learn how to manage credentials (API keys) in TensorZero.
 ---
 
