Pull out integrations

--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -1429,7 +1429,7 @@ routing = ["openai", "alternative-provider"]
 - **Type:** string
 - **Required:** yes
 
-Defines the types of the provider. See [Integrations &raquo; Model Providers](/gateway/integrations/#model-providers) for details.
+Defines the types of the provider. See [Integrations &raquo; Model Providers](/integrations/model-providers) for details.
 
 TensorZero currently only supports `openai` as a provider for embedding models.
 More integrations are on the way.
