--- a/docs/gateway/guides/multimodal-inference.mdx
+++ b/docs/gateway/guides/multimodal-inference.mdx
@@ -5,7 +5,7 @@ description: Learn how to use multimodal inference with TensorZero Gateway.
 
 TensorZero Gateway supports multimodal inference (e.g. image and PDF inputs).
 
-See [Integrations](/gateway/integrations/) for a list of supported models.
+See [Integrations](/integrations/model-providers) for a list of supported models.
 
 <Tip>
 
