--- a/docs/gateway/call-any-llm.mdx
+++ b/docs/gateway/call-any-llm.mdx
@@ -34,7 +34,7 @@ export OPENAI_API_KEY="sk-..."
 
 <Tip>
 
-See the [Integrations](/gateway/integrations/) page to learn how to set up credentials for other LLM providers.
+See the [Integrations](/integrations/model-providers) page to learn how to set up credentials for other LLM providers.
 
 </Tip>
 
@@ -139,7 +139,7 @@ export OPENAI_API_KEY="sk-..."
 
 <Tip>
 
-See the [Integrations](/gateway/integrations/) page to learn how to set up credentials for other LLM providers.
+See the [Integrations](/integrations/model-providers) page to learn how to set up credentials for other LLM providers.
 
 </Tip>
 
@@ -262,7 +262,7 @@ export OPENAI_API_KEY="sk-..."
 
 <Tip>
 
-See the [Integrations](/gateway/integrations/) page to learn how to set up credentials for other LLM providers.
+See the [Integrations](/integrations/model-providers) page to learn how to set up credentials for other LLM providers.
 
 </Tip>
 
@@ -385,7 +385,7 @@ export OPENAI_API_KEY="sk-..."
 
 <Tip>
 
-See the [Integrations](/gateway/integrations/) page to learn how to set up credentials for other LLM providers.
+See the [Integrations](/integrations/model-providers) page to learn how to set up credentials for other LLM providers.
 
 </Tip>
 
