--- a/docs/gateway/guides/tool-use.mdx
+++ b/docs/gateway/guides/tool-use.mdx
@@ -6,7 +6,7 @@ description: Learn how to use tool use (function calling) with TensorZero Gatewa
 TensorZero has first-class support for tool use, a feature that allows LLMs to interact with external tools (e.g. APIs, databases, web browsers).
 
 Tool use is available for most model providers supported by TensorZero.
-See [Integrations](/gateway/integrations/) for a list of supported model providers.
+See [Integrations](/integrations/model-providers/) for a list of supported model providers.
 
 You can define a tool in your configuration file and attach it to a TensorZero function that should be allowed to call it.
 Alternatively, you can define a tool dynamically at inference time.
