--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -72,6 +72,14 @@ system](/gateway/guides/opentelemetry-otlp).
   environment variable. See above linked guide for details.
 </Warning>
 
+### `export.otlp.traces.format`
+
+- **Type:** either "opentelemetry" or "openinference"
+- **Required:** no (default: `"opentelemetry"`)
+
+If set to `"opentelemetry"`, TensorZero will set 'gen_ai' attributes based on the OpenTelemetry GenAI semantic [conventions](https://github.com/open-telemetry/semantic-conventions/blob/main/docs/genai/genai.md).
+If set to `"openinference"`, TensorZero will set attributes based on the OpenInference semantic [conventions](https://github.com/Arize-ai/openinference/blob/main/spec/llm_spans.md).
+
 ### `observability.async_writes`
 
 - **Type:** boolean
