--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -69,7 +69,7 @@ system](/gateway/guides/opentelemetry-otlp).
 
 <Warning>
   Note that you will still need to set the `OTEL_EXPORTER_OTLP_TRACES_ENDPOINT`
-  environment variable. See above linked guide for details.
+  environment variable. See the above-linked guide for details.
 </Warning>
 
 ### `export.otlp.traces.format`
@@ -77,8 +77,8 @@ system](/gateway/guides/opentelemetry-otlp).
 - **Type:** either "opentelemetry" or "openinference"
 - **Required:** no (default: `"opentelemetry"`)
 
-If set to `"opentelemetry"`, TensorZero will set 'gen_ai' attributes based on the OpenTelemetry GenAI semantic [conventions](https://github.com/open-telemetry/semantic-conventions/blob/main/docs/genai/genai.md).
-If set to `"openinference"`, TensorZero will set attributes based on the OpenInference semantic [conventions](https://github.com/Arize-ai/openinference/blob/main/spec/llm_spans.md).
+If set to `"opentelemetry"`, TensorZero will set `gen_ai` attributes based on the [OpenTelemetry GenAI semantic conventions](https://github.com/open-telemetry/semantic-conventions/blob/main/docs/genai/genai.md)).
+If set to `"openinference"`, TensorZero will set attributes based on the [OpenInference semantic conventions](https://github.com/Arize-ai/openinference/blob/main/spec/llm_spans.md).
 
 ### `observability.async_writes`
 
