--- a/docs/deployment/tensorzero-gateway.mdx
+++ b/docs/deployment/tensorzero-gateway.mdx
@@ -99,23 +99,23 @@ If required credentials are missing, the gateway will fail on startup.
 
 Unless customized in your configuration file, the following credentials are used by default:
 
-| Provider                | Environment Variable(s)                                                                               |
-| ----------------------- | ----------------------------------------------------------------------------------------------------- |
-| Anthropic               | `ANTHROPIC_API_KEY`                                                                                   |
-| AWS Bedrock             | `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY` (see [details](/gateway/guides/providers/aws-bedrock))   |
-| AWS SageMaker           | `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY` (see [details](/gateway/guides/providers/aws-sagemaker)) |
-| Azure OpenAI            | `AZURE_OPENAI_API_KEY`                                                                                |
-| Fireworks               | `FIREWORKS_API_KEY`                                                                                   |
-| GCP Vertex AI Anthropic | `GCP_VERTEX_CREDENTIALS_PATH` (see [details](/gateway/guides/providers/gcp-vertex-ai-anthropic))      |
-| GCP Vertex AI Gemini    | `GCP_VERTEX_CREDENTIALS_PATH` (see [details](/gateway/guides/providers/gcp-vertex-ai-gemini))         |
-| Google AI Studio Gemini | `GOOGLE_AI_STUDIO_GEMINI_API_KEY`                                                                     |
-| Groq                    | `GROQ_API_KEY`                                                                                        |
-| Hyperbolic              | `HYPERBOLIC_API_KEY`                                                                                  |
-| Mistral                 | `MISTRAL_API_KEY`                                                                                     |
-| OpenAI                  | `OPENAI_API_KEY`                                                                                      |
-| OpenRouter              | `OPENROUTER_API_KEY`                                                                                  |
-| Together                | `TOGETHER_API_KEY`                                                                                    |
-| xAI                     | `XAI_API_KEY`                                                                                         |
+| Provider                | Environment Variable(s)                                                                                   |
+| ----------------------- | --------------------------------------------------------------------------------------------------------- |
+| Anthropic               | `ANTHROPIC_API_KEY`                                                                                       |
+| AWS Bedrock             | `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY` (see [details](/integrations/model-providers/aws-bedrock))   |
+| AWS SageMaker           | `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY` (see [details](/integrations/model-providers/aws-sagemaker)) |
+| Azure OpenAI            | `AZURE_OPENAI_API_KEY`                                                                                    |
+| Fireworks               | `FIREWORKS_API_KEY`                                                                                       |
+| GCP Vertex AI Anthropic | `GCP_VERTEX_CREDENTIALS_PATH` (see [details](/integrations/model-providers/gcp-vertex-ai-anthropic))      |
+| GCP Vertex AI Gemini    | `GCP_VERTEX_CREDENTIALS_PATH` (see [details](/integrations/model-providers/gcp-vertex-ai-gemini))         |
+| Google AI Studio Gemini | `GOOGLE_AI_STUDIO_GEMINI_API_KEY`                                                                         |
+| Groq                    | `GROQ_API_KEY`                                                                                            |
+| Hyperbolic              | `HYPERBOLIC_API_KEY`                                                                                      |
+| Mistral                 | `MISTRAL_API_KEY`                                                                                         |
+| OpenAI                  | `OPENAI_API_KEY`                                                                                          |
+| OpenRouter              | `OPENROUTER_API_KEY`                                                                                      |
+| Together                | `TOGETHER_API_KEY`                                                                                        |
+| xAI                     | `XAI_API_KEY`                                                                                             |
 
 <Tip>
 
@@ -167,4 +167,13 @@ Optionally, you can provide the following command line argument to customize the
 
 The TensorZero Gateway exposes endpoints for status and health checks.
 The `/status` endpoint checks that the gateway is running successfully.
+
+```json title="GET /status"
+{ "status": "ok" }
+```
+
 The `/health` endpoint additionally checks that it can communicate with ClickHouse (if observability is enabled).
+
+```json title="GET /health"
+{ "gateway": "ok", "clickhouse": "ok" }
+```
