Add support for OpenInference tags in OTEL span export (#3549)
* Add support for OpenInference tags in OTEL span export

THis is configured through a new `gateway.export.otlp.traces.format`
tag. The supported options are:
* "opentelemetry" (the default) - this creates `gen_ai` span tags
  based on the standard OpenTelemetry GenAI semantic conventions:
  https://opentelemetry.io/docs/specs/semconv/gen-ai/
* "openinference" -  this creates tags based on the OpenInference
  specification: https://opentelemetry.io/docs/specs/semconv/gen-ai/

For now, we only set the following OpenInference tags:
* `openinference.span.kind:
* `llm.system`
* `llm.model_name`

More tags will be added over time

* Fix tests

* Fix story

* added configuration documentation

* Update configuration-reference.mdx

* Fix formatting in configuration reference documentation

* Fix otel test

* Fix clippy

* Fix another test

---------

Co-authored-by: Viraj Mehta <viraj@tensorzero.com>
Co-authored-by: Gabriel Bianconi <1275491+GabrielBianconi@users.noreply.github.com>

--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -69,8 +69,16 @@ system](/gateway/guides/opentelemetry-otlp).
 
 <Warning>
   Note that you will still need to set the `OTEL_EXPORTER_OTLP_TRACES_ENDPOINT`
-  environment variable. See above linked guide for details.
+  environment variable. See the above-linked guide for details.
 </Warning>
+
+### `export.otlp.traces.format`
+
+- **Type:** either "opentelemetry" or "openinference"
+- **Required:** no (default: `"opentelemetry"`)
+
+If set to `"opentelemetry"`, TensorZero will set `gen_ai` attributes based on the [OpenTelemetry GenAI semantic conventions](https://github.com/open-telemetry/semantic-conventions/blob/main/docs/genai/genai.md).
+If set to `"openinference"`, TensorZero will set attributes based on the [OpenInference semantic conventions](https://github.com/Arize-ai/openinference/blob/main/spec/llm_spans.md).
 
 ### `observability.async_writes`
 
