--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -29,7 +29,7 @@ For example, if `base_path` is set to `/custom/prefix`, the inference endpoint w
 - **Type:** string
 - **Required:** no (default: `[::]:3000`)
 
-Defines the socket address to bind the TensorZero Gateway to.
+Defines the socket address (including port) to bind the TensorZero Gateway to.
 
 You can bind the gateway to IPv4 and/or IPv6 addresses.
 To bind to an IPv6 address, you can set this field to a value like `[::]:3000`.
