Add docs on embeddings

--- a/docs/gateway/call-any-llm.mdx
+++ b/docs/gateway/call-any-llm.mdx
@@ -12,7 +12,7 @@ This page shows how to:
 
 <Tip>
 
-We provide [complete code examples](https://github.com/tensorzero/tensorzero/tree/main/examples/docs/guides/gateway/call-any-llm) on Github.
+We provide [complete code examples](https://github.com/tensorzero/tensorzero/tree/main/examples/docs/guides/gateway/call-any-llm) on GitHub.
 
 </Tip>
 
