--- a/docs/integrations/model-providers/azure.mdx
+++ b/docs/integrations/model-providers/azure.mdx
@@ -99,3 +99,10 @@ curl -X POST http://localhost:3000/inference \
     }
   }'
 ```
+
+## Other Features
+
+### Generate embeddings
+
+The Azure OpenAI Service model provider supports generating embeddings.
+You can find a [complete code example on GitHub](https://github.com/tensorzero/tensorzero/tree/main/examples/guides/embeddings/providers/azure).
