--- a/docs/integrations/model-providers/index.mdx
+++ b/docs/integrations/model-providers/index.mdx
@@ -12,7 +12,7 @@ The TensorZero Gateway integrates with the major LLM providers.
 | [Anthropic](/integrations/model-providers/anthropic/)                                                                                                                      |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ❌     |  ❌   |
 | [AWS Bedrock](/integrations/model-providers/aws-bedrock/)                                                                                                                  |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ❌     |  ❌   |
 | [AWS SageMaker](/integrations/model-providers/aws-sagemaker/)                                                                                                              |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ❌     |  ❌   |
-| [Azure OpenAI Service](/integrations/model-providers/azure/)                                                                                                               |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ❌     |  ❌   |
+| [Azure OpenAI Service](/integrations/model-providers/azure/)                                                                                                               |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ✅     |  ❌   |
 | [DeepSeek](/integrations/model-providers/deepseek/)                                                                                                                        |       ✅       |       ✅       |    ⚠️     |    ❌    |     ❌     |     ❌     |  ❌   |
 | [Fireworks AI](/integrations/model-providers/fireworks/)                                                                                                                   |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ❌     |  ❌   |
 | [GCP Vertex AI Anthropic](/integrations/model-providers/gcp-vertex-ai-anthropic/)                                                                                          |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ❌     |  ❌   |
@@ -21,7 +21,7 @@ The TensorZero Gateway integrates with the major LLM providers.
 | [Groq](/integrations/model-providers/groq/)                                                                                                                                |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ❌     |  ❌   |
 | [Hyperbolic](/integrations/model-providers/hyperbolic/)                                                                                                                    |       ✅       |       ⚠️       |    ✅     |    ❌    |     ❌     |     ❌     |  ❌   |
 | [Mistral](/integrations/model-providers/mistral/)                                                                                                                          |       ✅       |       ✅       |    ✅     |    ✅    |     ❌     |     ❌     |  ❌   |
-| [OpenAI](/integrations/model-providers/openai/) and<br /><span style={{whiteSpace: 'nowrap'}}>[OpenAI-Compatible](/integrations/model-providers/openai-compatible/)</span> |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ⚠️     |  ✅   |
+| [OpenAI](/integrations/model-providers/openai/) and<br /><span style={{whiteSpace: 'nowrap'}}>[OpenAI-Compatible](/integrations/model-providers/openai-compatible/)</span> |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ✅     |  ✅   |
 | [OpenRouter](/integrations/model-providers/openrouter/)                                                                                                                    |       ✅       |       ✅       |    ✅     |    ✅    |     ✅     |     ❌     |  ❌   |
 | [SGLang](/integrations/model-providers/sglang/)                                                                                                                            |       ✅       |       ✅       |    ✅     |    ❌    |     ❌     |     ❌     |  ❌   |
 | [TGI](/integrations/model-providers/tgi/)                                                                                                                                  |       ✅       |       ✅       |    ⚠️     |    ❌    |     ❌     |     ❌     |  ❌   |
