--- a/docs/integrations/model-providers/openai-compatible.mdx
+++ b/docs/integrations/model-providers/openai-compatible.mdx
@@ -121,3 +121,10 @@ curl -X POST http://localhost:3000/inference \
     }
   }'
 ```
+
+## Other Features
+
+### Generate embeddings
+
+The OpenAI model provider supports generating embeddings.
+You can find a [complete code example using Ollama on GitHub](https://github.com/tensorzero/tensorzero/tree/main/examples/guides/embeddings/providers/openai-compatible-ollama).
