--- a/docs/integrations/model-providers/openai.mdx
+++ b/docs/integrations/model-providers/openai.mdx
@@ -133,3 +133,10 @@ curl -X POST http://localhost:3000/inference \
     }
   }'
 ```
+
+## Other Features
+
+### Generate embeddings
+
+The OpenAI model provider supports generating embeddings.
+You can find a [complete code example on GitHub](https://github.com/tensorzero/tensorzero/tree/main/examples/guides/embeddings/providers/openai).
