--- a/docs/gateway/api-reference/inference.mdx
+++ b/docs/gateway/api-reference/inference.mdx
@@ -131,10 +131,8 @@ This field is primarily for debugging and testing, and you should generally not 
 - **Required:** no
 
 The ID of an existing episode to associate the inference with.
-
-For the first inference of a new episode, you should not provide an `episode_id`. If null, the gateway will generate a new episode ID and return it in the response.
-
-Only use episode IDs that were returned by the TensorZero gateway.
+If null, the gateway will generate a new episode ID and return it in the response.
+See [Episodes](/gateway/guides/episodes) for more information.
 
 #### `extra_body`
 
