--- a/examples/optimization/dicl/dicl.ipynb
+++ b/examples/optimization/dicl/dicl.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from tensorzero import AsyncTensorZeroGateway, DiclOptimizationConfig\n",
+    "from tensorzero import AsyncTensorZeroGateway, DICLOptimizationConfig\n",
     "from tqdm.asyncio import tqdm"
    ]
   },
@@ -186,10 +186,11 @@
    "source": [
     "job_handle = await t0.experimental_launch_optimization(\n",
     "    train_samples=train_samples,\n",
-    "    optimization_config=DiclOptimizationConfig(\n",
+    "    optimization_config=DICLOptimizationConfig(\n",
     "        embedding_model=\"openai::text-embedding-3-small\",\n",
     "        function_name=\"classify_spam\",\n",
     "        variant_name=\"dicl\",\n",
+    "        append_to_existing_variants=True,\n",
     "    ),\n",
     ")"
    ]
