Document new Azure OpenAI Service API version

--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -600,7 +600,7 @@ region = "us-east-2"
 
 <Accordion title='type: "azure"'>
 
-The TensorZero Gateway handles the API version under the hood (currently `2024-06-01`).
+The TensorZero Gateway handles the API version under the hood (currently `2025-04-01-preview`).
 You only need to set the `deployment_id` and `endpoint` fields.
 
 ##### `deployment_id`
