--- a/examples/optimization/dicl/dicl.ipynb
+++ b/examples/optimization/dicl/dicl.ipynb
@@ -32,15 +32,15 @@
    "outputs": [],
    "source": [
     "def load_data():\n",
-    "    df = pd.read_csv(\"data/spam.csv\")\n",
+    "    df = pd.read_csv(\"data/clean_data.csv\")\n",
     "\n",
     "    # Print dataset statistics\n",
-    "    print(\"Training Samples: \", df[df[\"train\"] == 1].shape[0])\n",
-    "    print(\"Validation Samples: \", df[df[\"train\"] == 0].shape[0])\n",
+    "    print(\"Training Samples: \", df[df[\"is_train\"] == 1].shape[0])\n",
+    "    print(\"Validation Samples: \", df[df[\"is_train\"] == 0].shape[0])\n",
     "    print(f\"Spam {df[df['class'] == 1].shape[0] / df.shape[0]:.2%}\")\n",
     "\n",
     "    # Split dataset into training and validation sets\n",
-    "    train_df, val_df = df[df[\"train\"] == 1], df[df[\"train\"] == 0]\n",
+    "    train_df, val_df = df[df[\"is_train\"] == 1], df[df[\"is_train\"] == 0]\n",
     "\n",
     "    return train_df, val_df\n",
     "\n",
@@ -299,7 +299,10 @@
     "    print(f\"True Positives: {tp}\")\n",
     "    print(f\"True Negatives: {tn}\")\n",
     "    print(f\"False Positives: {fp}\")\n",
-    "    print(f\"False Negatives: {fn}\")"
+    "    print(f\"False Negatives: {fn}\")\n",
+    "    print(f\"F1 Score: {2 * tp / (2 * tp + fp + fn):.2f}\")\n",
+    "    print(f\"Precision: {tp / (tp + fp):.2f}\")\n",
+    "    print(f\"Recall: {tp / (tp + fn):.2f}\")"
    ]
   },
   {
@@ -329,8 +332,11 @@
    "source": [
     "At the time of writing, the DICL variant materially outperforms the baseline variant:\n",
     "\n",
-    "- False Positives: 37 → 7\n",
-    "- False Negatives: 7 → 0"
+    "- False Positives: 37 → 21\n",
+    "- False Negatives: 7 → 3\n",
+    "- F1 Score: 0.85 → 0.91\n",
+    "- Precision: 77% → 86%\n",
+    "- Recall: 95% → 97%\n"
    ]
   }
  ],
