--- a/docs/comparison/litellm.mdx
+++ b/docs/comparison/litellm.mdx
@@ -68,7 +68,7 @@ That said, **you can get the best of both worlds by using LiteLLM as a model pro
   TensorZero enables a schema-first approach to building LLM applications, allowing you to separate your application logic from LLM implementation details.
   This approach allows your to more easily manage complex LLM applications, benefit from GitOps for prompt and configuration management, counterfactually improve data for optimization, and more.
   LiteLLM only offers the standard unstructured chat completion interface.<br />
-  [→ Prompt Templates & Schemas with TensorZero](/gateway/guides/prompt-templates-schemas/)
+  [→ Prompt Templates & Schemas with TensorZero]((/gateway/create-a-prompt-template)
 
 ### LiteLLM
 
