--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -546,7 +546,7 @@ Since we haven't done that yet, the TensorZero UI will skip the curation step be
 
 The Quickstart guide gives a tiny taste of what TensorZero is capable of.
 
-We strongly encourage you to check out the guides on [metrics & feedback](/gateway/guides/metrics-feedback/) and [prompt templates & schemas](/gateway/guides/prompt-templates-schemas/).
+We strongly encourage you to check out the guides on [metrics & feedback](/gateway/guides/metrics-feedback/) and [prompt templates & schemas]((/gateway/create-a-prompt-template).
 Though optional, they unlock many of the downstream features TensorZero offers in experimentation and optimization.
 
 From here, you can explore features like built-in support for [inference-time optimizations](/gateway/guides/inference-time-optimizations/), [retries & fallbacks](/gateway/guides/retries-fallbacks/), [experimentation (A/B testing) with prompts and models](/gateway/tutorial/#experimentation), and a lot more.
