--- a/docs/gateway/index.mdx
+++ b/docs/gateway/index.mdx
@@ -42,7 +42,7 @@ The TensorZero Gateway is a high-performance model gateway that provides a unifi
 - **Structured Inferences.**
   The gateway enforces schemas for inputs and outputs, ensuring robustness for your application.
   Structured inference data is later used for powerful optimization recipes (e.g. swapping historical prompts before fine-tuning).
-  Learn more about [prompt templates & schemas]((/gateway/create-a-prompt-template).
+  Learn more about [creating prompt templates](/gateway/create-a-prompt-template).
 
 - **Multi-Step LLM Workflows.**
   The gateway provides first-class support for complex multi-step LLM workflows by associating multiple inferences with an episode.
