--- a/docs/gateway/create-a-prompt-template.mdx
+++ b/docs/gateway/create-a-prompt-template.mdx
@@ -237,7 +237,9 @@ templates.fun_fact_topic.path = "functions/fun_fact/gpt_5_mini/fun_fact_topic_te
 
 ## Re-use prompt snippets
 
-You can enable template file system access to reuse shared snippets.
+You can enable template file system access to reuse shared snippets in your prompts.
+
+To use the MiniJinja directives `{% include %}` and `{% import %}`, you need to enable template file system access with `gateway.template_filesystem_access`.
 See [Organize your configuration](/operations/organize-your-configuration#enable-template-file-system-access-to-reuse-shared-snippets) for details.
 
 ## Migrate from legacy prompt templates
