clarify the default

--- a/docs/operations/export-opentelemetry-traces.mdx
+++ b/docs/operations/export-opentelemetry-traces.mdx
@@ -90,7 +90,7 @@ For inference requests, these traces additionally contain spans that represent t
 
 TensorZero supports the following tracing semantics:
 
-- [OpenTelemetry semantic conventions for Generative AI](https://opentelemetry.io/docs/specs/semconv/gen-ai/);
+- [OpenTelemetry semantic conventions for Generative AI](https://opentelemetry.io/docs/specs/semconv/gen-ai/) (the default);
 - [OpenInference](https://github.com/Arize-ai/openinference).
 
 You can configure which one you would like the TensorZero gateway to export
