Update docs and error message on sharded deployments.

--- a/docs/operations/organize-your-configuration.mdx
+++ b/docs/operations/organize-your-configuration.mdx
@@ -34,7 +34,7 @@ For example:
 ```toml
 [functions.my_function.variants.my_variant]
 # ...
-system_template = "templates/system.minijinja"  # relative to this TOML file
+templates.system.path = "templates/system.minijinja"  # relative to this TOML file
 # ...
 ```
 
