--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -39,7 +39,11 @@ Other options for managed ClickHouse deployments include [Tinybird](https://www.
 You can alternatively run your own self-managed ClickHouse instance or cluster.
 
 TensorZero supports single-node and replicated deployments.
-It currently does not support sharded deployments.
+
+<Warning>
+  TensorZero does not currently support **sharded** self-hosted ClickHouse
+  deployments.
+</Warning>
 
 See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more details on configuring your ClickHouse deployment.
 
