--- a/docs/deployment/clickhouse.mdx
+++ b/docs/deployment/clickhouse.mdx
@@ -38,8 +38,7 @@ Other options for managed ClickHouse deployments include [Tinybird](https://www.
 
 You can alternatively run your own self-managed ClickHouse instance or cluster.
 
-TensorZero supports single-node and replicated deployments.
-It currently does not support sharded deployments.
+TensorZero supports single-node, replicated, and sharded deployments.
 
 See the [ClickHouse documentation](https://clickhouse.com/docs/install) for more details on configuring your ClickHouse deployment.
 
@@ -70,9 +69,50 @@ TENSORZERO_CLICKHOUSE_URL="http://host.docker.internal:8123/tensorzero"
 
 If you're using a self-hosted replicated ClickHouse deployment, you must also provide the ClickHouse cluster name in the `TENSORZERO_CLICKHOUSE_CLUSTER_NAME` environment variable.
 
+### Sharded deployments
+
+TensorZero supports sharded ClickHouse deployments for horizontal scaling. To enable sharding, you must:
+
+1. **Set up a ClickHouse cluster**: Configure a multi-shard ClickHouse cluster with the appropriate distributed and local tables
+2. **Enable sharding in TensorZero**: Set the required environment variables
+
+```bash title=".env"
+# Required for sharded deployments
+TENSORZERO_CLICKHOUSE_CLUSTER_NAME="your_cluster_name"
+TENSORZERO_CLICKHOUSE_SHARDING_ENABLED="true"
+
+# Optional: customize the sharding key (defaults to "rand()")
+TENSORZERO_CLICKHOUSE_SHARDING_KEY="rand()"
+```
+
+#### Sharding configuration options
+
+- **`TENSORZERO_CLICKHOUSE_SHARDING_ENABLED`**: Set to `"true"` to enable sharding support (default: `"false"`)
+- **`TENSORZERO_CLICKHOUSE_SHARDING_KEY`**: The sharding key expression for data distribution (default: `"rand()"`)
+
+Common sharding key options:
+- `"rand()"` - Random distribution across shards (recommended for most use cases)
+- `"cityHash64(column_name)"` - Hash-based distribution on a specific column for data locality
+- Custom expressions based on your specific data distribution requirements
+
+#### How sharding works in TensorZero
+
+When sharding is enabled, TensorZero automatically:
+- Creates distributed tables for querying data across all shards
+- Creates local tables on each shard for actual data storage
+- Routes indices to local tables only (where they're effective)
+- Configures materialized views to read from local tables and write to distributed tables
+- Handles all migration operations transparently across the cluster
+
+This design ensures optimal performance while maintaining data consistency across your sharded ClickHouse deployment.
+
 ### Applying database migrations
 
 The TensorZero Gateway typically applies database migrations automatically when it starts up.
 
-If you're using a self-hosted replicated ClickHouse deployment, you must apply database migrations manually with `gateway --run-migrations-only`.
+If you're using a self-hosted replicated or sharded ClickHouse deployment, you must apply database migrations manually with `gateway --run-migrations-only`.
 In this case, the gateway will not apply migrations automatically, and will error on startup if migrations are missing.
+
+<Note>
+  For sharded deployments, ensure that `TENSORZERO_CLICKHOUSE_SHARDING_ENABLED="true"` is set when running migrations to ensure proper distributed and local table creation.
+</Note>
